# pairoscope

./: .gitignore  CMakeLists.txt  Doxyfile.in  PackageInfo.cmake  README.md
cmake/Modules/: FindSamtools.cmake
debian/: postinst  postinst.in  prerm  prerm.in
src/: YColor.h  YDepthView.cpp  YDepthView.h  YGeneView.cpp  YGeneView.h  YGenomeView.cpp  YMatePair.h  YPairView.cpp  YPoint.h  YRect.h  YTranscript.h  YTranscriptSubStructure.h
src/exe/pairoscope/: CMakeLists.txt  YAlignmentFetcher.cpp  YAlignmentFetcher.h  YBDConfig.cpp  YBDConfig.h  YColor.h  YDepthView.cpp  YDepthView.h  YGeneView.cpp  YGeneView.h  YGenomeView.cpp  YGenomeView.h  YMatePair.cpp  YMatePair.h  YPairView.cpp  YPairView.h  YPoint.h  YRect.h  YTranscript.h  YTranscriptFetcher.cpp  YTranscriptFetcher.h  YTranscriptSubStructure.h  YView.cpp  YView.h  pairoscope.cpp
src/lib/io/: DepthArray.hpp
tags/pairoscope-0.2/: CMakeLists.txt
tags/pairoscope-0.2/src/: YAlignmentFetcher.h  YDepthView.cpp  YGenomeView.h  YMatePair.h  YTranscriptFetcher.h  pairoscope.cpp  stdhash.hh
test/lib/io/: CMakeLists.txt  TestDepthArray.cpp
trunk/: Doxyfile
trunk/src/: YAlignmentFetcher.cpp  YAlignmentFetcher.h  YDepthView.cpp  YGeneView.cpp  YGenomeView.cpp  YGenomeView.h  YMatePair.h  YPairView.cpp  YPairView.h  YTranscriptFetcher.cpp  YTranscriptFetcher.h  YView.h  pairoscope.cpp
version/: version.h
